small css change on the input

--- a/js/carousel/templates/popover.html
+++ b/js/carousel/templates/popover.html
@@ -1,5 +1,5 @@
 <div id="popover-content" class="popover-base">
-    HEX color:<br>
+    Background color:<br>
     <input id="hex-colour-input" type="text">
     <br><br>
     <button id="set-color-btn"  type="button">Set color</button>
