--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ body {
     font-size: 48px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
+    z-index: 0;
 }
 
 /* Position the "next button" to the right */
@@ -90,18 +91,21 @@ body {
 }
 
 /* Slideshow container */
-.slider-content {
-    position: relative;
-    margin: auto;
+#slider-content {
+    height: 100%;
+    width: 100%;
+    z-index: -3;
+    position: absolute;
 }
 
 .slide-view {
-    z-index: -20;
+    z-index: -2;
     text-align: center;
     display: none;
     position: absolute;
     width: 100%;
     height: 100%;
+    background-color: #ffffff;
 }
 
 .wrapper {
@@ -130,6 +134,7 @@ body {
 
 .settings-icon {
     float: right;
+    cursor: pointer;
 }
 
 /* POPOVER */
@@ -142,24 +147,23 @@ body {
     opacity: 1;
     visibility: visible;
     left: -150px;
-    background-color: #BFBFBF;
     padding: 1.5rem;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-    width: auto;
-    z-index: 999;
     float: right;
     transform: translate(10px, 10px);
+    border: 1px solid black;
+    border-radius: 10px;
+    background: #ffffff;
 }
 
 .popover-content-visible:before {
     position: absolute;
-    z-index: -1;
     content: '';
     right: 10px;
     top: -8px;
     border-style: solid;
     border-width: 0 10px 10px 10px;
-    border-color: transparent transparent #BFBFBF transparent;
+    border-color: transparent transparent #ffffff transparent;
 }
 
 .popover-message {
@@ -171,7 +175,6 @@ body {
     padding: 6px 12px;
     margin-bottom: 0;
     font-size: 14px;
-    font-weight: 400;
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
@@ -182,9 +185,12 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    background-image: none;
-    border: 1px solid transparent;
-    border-radius: 4px;
+    background: #3eb33e;
+    color: #ffffff;
+    border: 0;
+    border-radius: 0;
+    font-family: Arial, serif;
+    font-weight: bold;
 }
 
 #hex-colour-input {
@@ -195,4 +201,6 @@ body {
     border: 1px solid #ccc;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    padding: 5px;
+    border-radius: 5px;
 }
